feat: code first approach
