# design/swagger.yaml
@@ -636,6 +636,9 @@ components:
           example: '2035-12-31'
     EmployeeRequest:
       type: object
+      required:
+        - name
+        - email
       properties:
         name:
           type: string
@@ -654,6 +657,14 @@ components:
             $ref: '#/components/schemas/AddressRequest'
     AddressRequest:
       type: object
+      required:
+      - houseNumber
+      - street
+      - city
+      - state
+      - country
+      - zipCode
+      - addressType
       properties:
         houseNumber:
           type: integer
@@ -677,6 +688,11 @@ components:
           $ref: '#/components/schemas/AddressType'
     PassportRequest:
       type: object
+      required:
+        - passportNumber
+        - issuingCountry
+        - dateOfIssue
+        - dateOfExpiry
       properties:
         passportNumber:
           type: string
@@ -691,6 +707,8 @@ components:
           example: '2035-12-31'
     DepartmentRequest:
       type: object
+      required:
+        - name
       properties:
         name:
           type: string
@@ -706,6 +724,8 @@ components:
           example: Telekom
     ProjectRequest:
       type: object
+      required:
+        - name
       properties:
         name:
           type: string
@@ -727,6 +747,9 @@ components:
           example: true
     TrainingRequest:
       type: object
+      required:
+        - name
+        - domain
       properties:
         name:
           type: string
@@ -753,6 +776,8 @@ components:
           example: '2025-12-8'
     EmployeeTrainingDetailsRequest:
       type: object
+      required:
+        - startDate
       properties:
         startDate:
           type: string
