# src/main/java/com/rohit/ems/entities/AddressType.java
@@ -1,0 +1,6 @@
+package com.rohit.ems.entities;
+
+public enum AddressType {
+    HOME,
+    OFFICE
+}
